--- a/src/index.css
+++ b/src/index.css
@@ -55,15 +55,18 @@ section {
 .card {
   width: 175px;
   font-size: 12px;
-  padding: 20px;
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 .card--image {
   width: 176px;
   height: 235px;
   object-fit: cover;
-  border: 5px solid black;
-  border-radius: 9px;
+  border: 1px solid black;
+  border-radius: 2px;
 }
 
 .card--stats {
@@ -73,4 +76,30 @@ section {
 
 .card--star {
   height: 14px;
+}
+
+.card--title {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.card--price {
+  margin-top: auto;
+}
+
+.cards-list {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
+}
+
+.card--badge {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
 }
