--- a/src/index.css
+++ b/src/index.css
@@ -55,10 +55,10 @@ section {
 .card {
   width: 175px;
   font-size: 12px;
+  padding: 20px;
   flex: 0 0 auto;
   display: flex;
   flex-direction: column;
-  position: relative;
 }
 
 .card--image {
@@ -92,14 +92,4 @@ section {
   flex-wrap: nowrap;
   gap: 20px;
   overflow-x: auto;
-}
-
-.card--badge {
-  position: absolute;
-  top: 6px;
-  left: 6px;
-  background-color: white;
-  padding: 5px 7px;
-  border-radius: 2px;
-  font-weight: bold;
 }
